# rustapi

./: .env  .gitignore  Cargo.toml  Dockerfile  Tiltfile
charts/rustapi/: Chart.yaml  values.yaml
charts/rustapi/templates/: deployment.yaml  namespace.yaml  service.yaml
kustomize/: kustomization.yaml
kustomize/base/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
kustomize/overlays/development/: deployment-patch.yaml  kustomization.yaml
kustomize/overlays/production/: deployment-patch.yaml  kustomization.yaml
kustomize/overlays/staging/: deployment-patch.yaml  kustomization.yaml
src/: logger.rs  main.rs
